--- a/config/_default/menus.fr.toml
+++ b/config/_default/menus.fr.toml
@@ -10,6 +10,17 @@
 # overridden by providing a weight value. The menu will then be
 # ordered by weight from lowest to highest.
 
+
+[[main]]
+   name = "Équipe"
+   pageRef = "equipe"
+   weight = 10
+   
+[[main]]
+   name = "Contact"
+   pageRef = "contact"
+   weight = 20
+
 #[[main]]
 #  name = "Blog"
 #  pageRef = "posts"
