--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -36,7 +36,7 @@ defaultBackgroundImage = "img/visuel.jpg" # used as default for background image
   showScrollToTop = true
 
 [homepage]
-  layout = "background" # valid options: page, profile, hero, card, background, custom
+  layout = "custom" # valid options: page, profile, hero, card, background, custom
   homepageImage = "img/visuel.jpg" # used in: hero, and card
   showRecent = false
   showRecentItems = 5
