--- a/config/_default/menus.fr.toml
+++ b/config/_default/menus.fr.toml
@@ -10,16 +10,31 @@
 # overridden by providing a weight value. The menu will then be
 # ordered by weight from lowest to highest.
 
+[[main]]
+   name = "Magasin"
+   pageRef = "magasin"
+   weight = 10
 
 [[main]]
    name = "Équipe"
    pageRef = "equipe"
-   weight = 10
+   weight = 20
+
+[[main]]
+   name = "Marques"
+   pageRef = "marques"
+   weight = 30
+
+[[main]]
+   name = "Verres Hoya"
+   pageRef = "hoya"
+   weight = 40
    
 [[main]]
    name = "Contact"
    pageRef = "contact"
-   weight = 20
+   weight = 50
+   
 
 #[[main]]
 #  name = "Blog"
